plugins {
    id 'org.springframework.boot' version '2.5.6'
    id 'io.spring.dependency-management' version '1.0.10.RELEASE'
    id 'java'
    id "org.flywaydb.flyway" version "7.1.1"
}

group 'org.avni_integration_service'
version '0.0.2-SNAPSHOT'

bootJar {
    enabled = false
}

jar {
    enabled = true
}

tasks.withType(JavaCompile).all {
    options.compilerArgs += ['--enable-preview']
}

tasks.withType(Test).all {
    jvmArgs += '--enable-preview'
}

tasks.withType(JavaExec) {
    jvmArgs += '--enable-preview'
}

task migrateDb(type: org.flywaydb.gradle.task.FlywayMigrateTask) {
    url = 'jdbc:postgresql://localhost:5432/avni_int'
    user = 'avni_int'
    password = 'password'
    validateOnMigrate = false
}

task migrateTestDb(type: org.flywaydb.gradle.task.FlywayMigrateTask) {
    url = 'jdbc:postgresql://localhost:5432/avni_int_test'
    user = 'avni_int'
    password = 'password'
    validateOnMigrate = false
}

repositories {
    mavenCentral()
}

dependencies {
    implementation project(':integration-data')
    implementation project(':avni')
    implementation project(':util')
    implementation "log4j:log4j:1.2.17"
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'

    implementation 'org.springframework.boot:spring-boot-starter-web'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'com.bugsnag:bugsnag-spring:3.6.3'
}

test {
    mustRunAfter(":goonj:test")
    useJUnitPlatform()
}
sourceCompatibility = JavaVersion.VERSION_17
targetCompatibility = JavaVersion.VERSION_17
